Fix SonarQube cleanup issues